# heyball

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  heyball.rc
src/: async_runtime.cpp  async_runtime.hpp  core.cpp  core.hpp  game_draw.inc  game_update.inc  main.cpp  network.cpp  network.hpp  platform_threads.hpp  resource.h  resources.rc.in  text_utils.cpp  text_utils.hpp
tests/: mock_raylib.h  test_minimal.cpp  test_network.cpp  test_runner.cpp
tools/: extract_ttf.cpp  scan_chars.cpp  ucrt64-env.cmd
